# esp-sentinel-idf

./: .gitignore  202404010-0201.txt  20240409-1.txt  20240409.txt  CMakeLists.txt  log.txt  my_logs.txt  partitions.csv  sdkconfig  sdkconfig.default  sdkconfig.defaults  test_algo_init.c
build-verify/log/: idf_py_stderr_output_86189  idf_py_stdout_output_86189
components/algo/: ARCHITECTURE.md  ARCHITECTURE_VALIDATION.md  CMakeLists.txt  algo_accel_to_velocity.c  algo_baseline.c  algo_biquad.c  algo_envelope.c  algo_fft.c  algo_fft_analyzer.c  algo_fft_core.cpp  algo_iso10816.c  algo_kurtosis.c  algo_rms.c  algo_test.c  algo_welford_feature.c  envelope.cpp  fft_core.cpp  iso_10816.cpp  time_domain.cpp  vib_accel_to_velocity.c  vib_baseline.c  vib_biquad.c  vib_envelope.c  vib_fft.c  vib_fft_analyzer.c  vib_iso10816.c  vib_kurtosis.c  vib_welford_feature.c
components/algo/app/: vib_vibration_analyzer.c
components/algo/core/: vib_biquad.c  vib_fft.c
components/algo/features/: vib_envelope.c  vib_fft_analyzer.c  vib_iso10816.c  vib_kurtosis.c  vib_welford_feature.c
components/algo/include/: algo_accel_to_velocity.h  algo_baseline.h  algo_dsp_utils.h  algo_envelope.h  algo_err.h  algo_fft.h  algo_fft_analyzer.h  algo_fft_core.h  algo_iso.h  algo_iso10816.h  algo_kurtosis.h  algo_math.h  algo_pdm.h  algo_rms.h  algo_rpm_calibration.h  algo_sampling.h  algo_stash.h  algo_stats.h  algo_test.h  algo_types.h  algo_welford.h  algo_welford_feature.h  algo_window.h  iso_10816.h  vib_accel_to_velocity.h  vib_algo_err.h  vib_baseline.h  vib_envelope.h  vib_fft_analyzer.h  vib_iso10816.h  vib_math.h  vib_welford_feature.h
components/algo/include/app/: vib_vibration_analyzer.h
components/algo/include/core/: vib_biquad.h  vib_fft.h
components/algo/include/features/: vib_fft_analyzer.h  vib_iso10816.h  vib_kurtosis.h  vib_welford_feature.h
components/algo/include/pipeline/: vib_accel_to_velocity.h
components/algo/pipeline/: vib_accel_to_velocity.c
components/algo/private/: algo_math.h
components/algo/src/: algo_dsp_utils.c  algo_envelope.c  algo_fft.c  algo_ingest.c  algo_iso.c  algo_kurtosis.c  algo_math.c  algo_pdm.c  algo_rms.c  algo_rpm_calibration.c  algo_welford.c  algo_window.c  iso_10816.c
components/app/: CMakeLists.txt  app_baseline.c  sys_daq.c  task_monitor.c
components/app/include/: app_baseline.h  sys_daq.h  task_monitor.h
components/bsp/: CMakeLists.txt
components/bsp/core_wifi/: CMakeLists.txt  captive_dns.c  core_wifi_ap.c
components/bsp/core_wifi/include/: core_wifi.h
components/bsp/icm42688p/: daq_icm_42688_p.c  drv_icm_42688_p.c
components/bsp/icm_42688_p/: CMakeLists.txt  daq_icm_42688_p.c  drv_icm_42688_p.c
components/bsp/icm_42688_p/include/: daq_icm_42688_p.h  drv_icm_42688_p.h
components/bsp/include/: bsp_4g.h  bsp_board.h  bsp_network.h  bsp_power.h  bsp_wifi.h
components/bsp/ppp/: CMakeLists.txt  ppp_4g.c
components/bsp/ppp/include/: ppp_4g.h
components/bsp/src/: bsp_4g.c  bsp_network.c  bsp_power.c  bsp_wifi_ap.c  bsp_wifi_sta.c  captive_dns.c  ppp_4g.c
components/bsp/wifi/: CMakeLists.txt  wifi_ap.c  wifi_sta.c
components/config/: config_manager.c
components/config_manager/: CMakeLists.txt  config_manager.c
components/dispatcher/: CMakeLists.txt  data_dispatcher.c  data_dispatcher.h
components/fs_utils/: CMakeLists.txt  fs_utils.c
components/icm42688p/: CMakeLists.txt  drv_icm_42688_p.c  icm42688p.c
components/msg/: CMakeLists.txt
components/msg/include/: data_dispatcher.h  msg_machine_state.pb-c.h  msg_sentinel.pb-c.h
components/msg/proto/: msg_machine_state.proto  msg_sentinel.proto
components/msg/src/: data_dispatcher.c  msg_machine_state.pb-c.c  msg_sentinel.pb-c.c
components/network/: CMakeLists.txt  captive_dns.c  mqtt_client.c  ppp_4g.c  wifi_ap.c  wifi_sta.c
components/network/dispatcher/: CMakeLists.txt  data_dispatcher.c  data_dispatcher.h
components/network/include/: network_manager.h
components/network/mqtt/: CMakeLists.txt  mqtt_client.c
components/network/mqtt/include/: mqtt_client.h
components/network/mqtt_proxy/: CMakeLists.txt  mqtt_proxy.c
components/network/mqtt_proxy/include/: mqtt_proxy.h
components/network/src/: data_dispatcher.c
components/network/web/: CMakeLists.txt  api_handlers.c
components/peri/: CMakeLists.txt  Kconfig
components/peri/include/: daq_common.h  daq_icm_42688_p.h  daq_iis3dwb.h  drv_ds18b20.h  drv_icm_42688_p.h  drv_iis3dwb.h  drv_lis2dh12.h  drv_t1820b.h  drv_tmb12a05.h  imu_config.h  peri_spi_bus.h  wom_lis2dh12.h
components/peri/src/: daq_icm_42688_p.c  daq_iis3dwb.c  drv_ds18b20.c  drv_icm_42688_p.c  drv_iis3dwb.c  drv_lis2dh12.c  drv_t1820b.c  drv_tmb12a05.c  imu_config.c  peri_spi_bus.c  wom_lis2dh12.c
components/task/: CMakeLists.txt  task_baseline.c  task_fft.c  task_monitor.c
components/task/include/: daq_worker.h  off_sleep_manager.h  speed_calibration.h  task_baseline.h  task_dap.h  task_daq.h  task_diag_fusion.h  task_envelope.h  task_fft.h  task_interrupt.h  task_kurtosis.h  task_monitor.h  task_rms.h  task_stash.h  task_state_machine.h  wom_lis2dh12.h
components/task/src/: daq_worker.c  off_sleep_manager.c  speed_calibration.c  task_baseline.c  task_daq.c  task_diag_fusion.c  task_envelope.c  task_fft.c  task_interrupt.c  task_kurtosis.c  task_monitor.1.c  task_monitor.2.c  task_monitor.c  task_rms.c  task_stash.c  task_state_machine.c  wom_icm_42688.c  wom_lis2dh12.c
components/util/: CMakeLists.txt
components/util/include/: charge_control.h  config_manager.h  iso_check.h  machine_state.h  power_monitor.h  startup_gate.h  supercap_manager.h
components/util/src/: charge_control.c  config_manager.c  iso_check.c  logger.c  machine_state.c  power_monitor.c  startup_gate.c  supercap_manager.c
main/: CMakeLists.txt  Kconfig.projbuild  boot_flow.c  boot_flow.h  idf_component.yml  init.c  init.h  main.c  sentinel.c  vib_demo.c
normal_baseline/: Normal_1.mat
web/: index.html  style.css  test_api_consumption.html  test_battery_calc.html  test_fix.html  test_new_flow.html  test_report_frequency.html
web/src/: main.js
(+64 files in other folders)
